Modified the some changes in all

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,11 @@
       "sizes": "192x192"
     },
     {
+      "src": "mallelasuresh.png",
+      "type": "image/png",
+      "sizes": "960x960"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
